# PORTRAIT

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce.sh  requirements.txt
analysis/: README.md  __init__.py  manifest.py  run.py
analysis/app/: app_template.html  build_app.py  build_cohort_app.py  cohort_app_template.html
analysis/atypicality/: __init__.py  atypicality.py
analysis/axes/: __init__.py  axes.py
analysis/coherence/: __init__.py  profile.py
analysis/decision/: __init__.py  crc.py
analysis/describability_gate/: __init__.py  describability.py
analysis/nhanes/: __init__.py  cohort.py  impute.py
analysis/oracle/: __init__.py  roundtrip.py  scenarios.py
analysis/passport/: __init__.py  cohort_runner.py  frozen_score.py  orchestrate.py  passport.py  render.py  score_individual.py
analysis/position/: __init__.py  position.py
analysis/structure_test/: __init__.py  gate.py
analysis/surprise/: __init__.py  conditional.py
analysis/typicality/: __init__.py  typicality.py
analysis/uncertainty/: __init__.py  uncertainty.py
